[package]
name = "vault"
version = "0.1.0"
authors = ["Arthur Jourdan <arthur.jourdan@epitech.eu>"]
edition = "2021"

[dependencies]
tonic = "0.8.3"
prost = "0.11.5"
prost-types = "0.11.5"
prost-wkt = "0.3.4"
prost-wkt-types = "0.3.4"
mongodb = "2.1"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
tokio = {version = "1", features = ["full"] }
# chrono = "0.4" # Used for setting DateTimes
serde = "1.0"
serde_json = "1.0"
sysinfo = "0.29.10"
lazy_static = "1.4.0"

[build-dependencies]
tonic-build = "0.8.3"
